--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^5.1.0
   flutter_svg: ^2.0.7
   hoverover: ^0.1.1
+  url_launcher: ^6.1.12
+  fancy_containers: ^0.0.5
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/contents/
     - assets/icons/
 
   #   - images/a_dot_ham.jpeg
