--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hoverover: ^0.1.1
   url_launcher: ^6.1.12
   fancy_containers: ^0.0.5
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
     - assets/images/
     - assets/images/contents/
     - assets/icons/
+    - assets/slider/
 
   #   - images/a_dot_ham.jpeg
 
