--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  path_provider: ^2.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +42,11 @@ dependencies:
   fancy_containers: ^0.0.5
   carousel_slider: ^4.2.1
   firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.3
+  cloud_firestore_web: ^3.6.3
+  fluttertoast: ^8.2.2
+  get: ^4.6.5
+  firebase_storage: ^11.2.5
 
 dev_dependencies:
   flutter_test:
